# oven

./: .gitignore  CMakeLists.txt  README.md
include/oven/: test.hpp
include/oven/env/: env.hpp
include/oven/space/: continuous.hpp  discrete.hpp  multidiscrete.hpp  space.hpp
include/oven/tray/: dispatcher.hpp  operations.hpp  operatorstruct.hpp  tray.hpp  trayimpl.hpp  types.hpp  utils.hpp
include/oven/utils/: assert.hpp  common.hpp  configuration.hpp  intrusive_ptr.hpp
src/: main.cpp  test.cpp
src/space/: continuous.cpp  discrete.cpp  multidiscrete.cpp
src/tray/: dispatcher.cpp  operations.cpp  operatorstruct.cpp  tray.cpp  trayconstructor.cpp  trayimpl.cpp  traykernels.cpp  utils.cpp
tests/: CMakeLists.txt  config.json  main.cpp  output.txt
